[gd_scene load_steps=26 format=3 uid="uid://card26cltbba1"]

[ext_resource type="Script" uid="uid://cd31vmh881wm5" path="res://src/Map/map_viewer.gd" id="1_ojbyw"]
[ext_resource type="PackedScene" uid="uid://26tg32417lfm" path="res://src/load_rom.tscn" id="2_4wnqg"]
[ext_resource type="Script" uid="uid://dkngme7toaf3g" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_a072s"]
[ext_resource type="Script" uid="uid://bg3no6nu8phv0" path="res://src/camera_control.gd" id="3_dpuna"]
[ext_resource type="Script" uid="uid://cl143w048iago" path="res://src/Unit/character_controller_realtime.gd" id="3_wbco3"]
[ext_resource type="Script" uid="uid://05d30de5cm5w" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_8ik4g"]
[ext_resource type="Script" uid="uid://c50vdp0vsl2rm" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="6_yx7fd"]
[ext_resource type="PackedScene" uid="uid://buljw4afjva1d" path="res://src/Map/map.tscn" id="8_0n3mn"]
[ext_resource type="Script" uid="uid://b1ogscpjrty2b" path="res://src/Unit/unit.gd" id="8_o41s4"]
[ext_resource type="PackedScene" uid="uid://cw8mvbkue4ibk" path="res://src/Unit/unit_sprites_manager.tscn" id="9_81hnw"]
[ext_resource type="Script" uid="uid://cmjcg2ou16liv" path="res://src/Unit/unit_animation_manager.gd" id="9_rgxyk"]
[ext_resource type="Script" uid="uid://x1o6jl12c6sh" path="res://src/Unit/unit_debug_menu.gd" id="11_wboi1"]

[sub_resource type="Environment" id="Environment_njvnp"]
background_mode = 3
background_canvas_max_layer = -3

[sub_resource type="Resource" id="Resource_bid86"]
script = ExtResource("4_8ik4g")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_owd5a"]

[sub_resource type="SphereMesh" id="SphereMesh_qc6ji"]
material = SubResource("StandardMaterial3D_owd5a")

[sub_resource type="Gradient" id="Gradient_h7qnf"]
colors = PackedColorArray(0.1332, 0.14724, 0.18, 1, 0.39, 0.695, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1dnhu"]
gradient = SubResource("Gradient_h7qnf")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_omsuf"]
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h85aw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_46deq"]
material = SubResource("StandardMaterial3D_h85aw")
radius = 0.25
height = 0.5

[sub_resource type="Gradient" id="Gradient_gjfh4"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6vwfi"]
gradient = SubResource("Gradient_gjfh4")
width = 24
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_05x7e"]

[sub_resource type="QuadMesh" id="QuadMesh_foefj"]
material = SubResource("StandardMaterial3D_05x7e")

[node name="MapViewer" type="Node3D" node_paths=PackedStringArray("phantom_camera", "load_rom_button", "texture_viewer", "camera_controller", "background_gradient", "menu_list", "map_dropdown", "orthographic_check", "menu_reminder", "map_size_label", "maps", "unit")]
script = ExtResource("1_ojbyw")
phantom_camera = NodePath("PhantomCamera3D")
load_rom_button = NodePath("PanelContainer/MarginContainer/VBoxContainer2/LoadRom")
texture_viewer = NodePath("SpriteViewer")
camera_controller = NodePath("CameraController")
background_gradient = NodePath("BackgroundCanvasLayer/TextureRect")
menu_list = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer")
map_dropdown = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/MapDropdown")
orthographic_check = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/OrthographicCheckBox")
menu_reminder = NodePath("PanelContainer/MarginContainer/VBoxContainer2/MenuReminder")
map_size_label = NodePath("PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/MapSize")
maps = NodePath("Maps")
map_tscn = ExtResource("8_0n3mn")
unit = NodePath("Unit/CharacterBody3D")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_njvnp")

[node name="PhantomCamera3D" type="Node3D" parent="." node_paths=PackedStringArray("follow_target")]
transform = Transform3D(0.707107, -0.31551, 0.632763, 1.49012e-08, 0.894934, 0.446163, -0.707107, -0.31551, 0.632763, 126.553, 89.2326, 126.553)
script = ExtResource("3_a072s")
follow_mode = 6
follow_target = NodePath("../Unit/CharacterBody3D")
tween_resource = SubResource("Resource_bid86")
follow_damping = true
follow_distance = 200.0
spring_length = 200.0
collision_mask = 0
look_at_damping = true

[node name="Camera3D" type="Camera3D" parent="."]
physics_interpolation_mode = 1
transform = Transform3D(0.707107, -0.31551, 0.632814, 1.49012e-08, 0.894934, 0.446199, -0.707107, -0.31551, 0.632814, 126.553, 89.2326, 126.553)
projection = 1
size = 12.0

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("6_yx7fd")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("sprite", "camera", "camera_pivot")]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0, 0)
visible = false
script = ExtResource("3_dpuna")
sprite = NodePath("../SpriteViewer")
camera = NodePath("../Camera3D")
camera_pivot = NodePath("CameraPivot")
zoom_in_max = 0.5

[node name="CameraPivot" type="Node3D" parent="CameraController"]
transform = Transform3D(0.707107, -0.315509, 0.632814, 0, 0.894935, 0.446197, -0.707107, -0.315509, 0.632814, 0, 0, 0)

[node name="ReferenceSphere" type="MeshInstance3D" parent="CameraController"]
transform = Transform3D(0.5, 0, 0, 0, 0.500001, -1.49012e-08, 0, -1.49012e-08, 0.5, 0, 0, 0)
mesh = SubResource("SphereMesh_qc6ji")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 124.0
offset_bottom = 92.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LoadRom" parent="PanelContainer/MarginContainer/VBoxContainer2" instance=ExtResource("2_4wnqg")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="MapDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="MapSize" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Map Size: X x Y"

[node name="OrthographicCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Orthographic"

[node name="MenuReminder" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Press ESCAPE to toggle menu"

[node name="BackgroundCanvasLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="BackgroundCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1dnhu")

[node name="Unit" type="Node3D" parent="." node_paths=PackedStringArray("controller", "animation_manager")]
script = ExtResource("8_o41s4")
controller = NodePath("CharacterBody3D")
animation_manager = NodePath("CharacterBody3D/UnitAnimationManager")

[node name="CharacterBody3D" type="CharacterBody3D" parent="Unit" node_paths=PackedStringArray("phantom_camera")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 0.999999, 0, -0.707107, 0, 0.707107, 0, 0, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("3_wbco3")
phantom_camera = NodePath("../../PhantomCamera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Unit/CharacterBody3D"]
shape = SubResource("CapsuleShape3D_omsuf")

[node name="UnitReferenceSphere" type="MeshInstance3D" parent="Unit/CharacterBody3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98024e-08, 0, -2.98024e-08, 1, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_46deq")

[node name="ShadowSpringArm3D" type="SpringArm3D" parent="Unit/CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
spring_length = 5.0

[node name="DropShadowSprite3D" type="Sprite3D" parent="Unit/CharacterBody3D/ShadowSpringArm3D"]
transform = Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, 0, 0)
pixel_size = 0.0357
texture = SubResource("GradientTexture2D_6vwfi")

[node name="UnitAnimationManager" type="Node3D" parent="Unit/CharacterBody3D" node_paths=PackedStringArray("unit_debug_menu", "unit_data", "unit_sprites_manager")]
transform = Transform3D(1, 0, 0, 0, 0.894934, 0.446198, 0, -0.446198, 0.894934, 0, 0.643, 0)
script = ExtResource("9_rgxyk")
unit_debug_menu = NodePath("../UnitDebugMenu")
unit_data = NodePath("../..")
unit_sprites_manager = NodePath("UnitSpritesManager")
layer_priority_table_filepath = "res://src/fftae/layer_priority_table.txt"
weapon_table_filepath = "res://src/fftae/weapons.txt"
item_list_filepath = "res://src/fftae/item_list.txt"

[node name="UnitSpritesManager" parent="Unit/CharacterBody3D/UnitAnimationManager" instance=ExtResource("9_81hnw")]

[node name="UnitDebugMenu" type="Control" parent="Unit/CharacterBody3D" node_paths=PackedStringArray("animation_manager", "sprite_options", "anim_id_spin", "weapon_options", "item_options", "other_type_options", "ability_id_spin", "ability_name_line", "sprite_viewer")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_wboi1")
animation_manager = NodePath("../UnitAnimationManager")
sprite_options = NodePath("PanelContainer/MarginContainer/VBoxContainer/GridContainer/SprOptionButton")
anim_id_spin = NodePath("PanelContainer/MarginContainer/VBoxContainer/GridContainer/AnimPtrIdSpinBox")
weapon_options = NodePath("PanelContainer/MarginContainer/VBoxContainer/GridContainer/WeaponOptionButton")
item_options = NodePath("PanelContainer/MarginContainer/VBoxContainer/GridContainer/ItemOptionButton")
other_type_options = NodePath("PanelContainer/MarginContainer/VBoxContainer/GridContainer/OtherTypeOptionButton")
ability_id_spin = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AbilityIdSpinBox")
ability_name_line = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AbilityName")
sprite_viewer = NodePath("../../../SpriteViewer")

[node name="PanelContainer" type="PanelContainer" parent="Unit/CharacterBody3D/UnitDebugMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Sprite" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sprite: "
horizontal_alignment = 2

[node name="SprOptionButton" type="OptionButton" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="AnimationPtrId" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Animation Ptr: "
horizontal_alignment = 2

[node name="AnimPtrIdSpinBox" type="SpinBox" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
max_value = 256.0
rounded = true
select_all_on_focus = true

[node name="Weapon" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Weapon: "
horizontal_alignment = 2

[node name="WeaponOptionButton" type="OptionButton" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Item" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Item: "
horizontal_alignment = 2

[node name="ItemOptionButton" type="OptionButton" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Other Type" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Other: "
horizontal_alignment = 2

[node name="OtherTypeOptionButton" type="OptionButton" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="AnimationFps" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Animation FPS: "
horizontal_alignment = 2

[node name="AnimationFpsSpinBox" type="SpinBox" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
min_value = 0.1
step = 0.1
value = 59.0
allow_greater = true
select_all_on_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilityId" type="Label" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ability:"
horizontal_alignment = 2

[node name="AbilityIdSpinBox" type="SpinBox" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 453.0
rounded = true
select_all_on_focus = true

[node name="AbilityName" type="LineEdit" parent="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ability"
editable = false

[node name="SpriteViewer" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 0)
pixel_size = 0.05
billboard = 1
texture_filter = 0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.553391, -0.832921, 0, 0.832921, 0.553391, 0, 3.51982, 2.72607)

[node name="ReferenceQuad" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 12, -48, 12)
visible = false
mesh = SubResource("QuadMesh_foefj")

[node name="Maps" type="Node3D" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0)
pixel_size = 0.05
billboard = 1
text = "(1, 0, 0)"

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
pixel_size = 0.05
billboard = 1
text = "(-1, 0, 0)"

[node name="Label3D3" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
pixel_size = 0.05
billboard = 1
text = "(0, 0, 1)"

[node name="Label3D4" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)
pixel_size = 0.05
billboard = 1
text = "(0, 0, -1)"

[connection signal="value_changed" from="Unit/CharacterBody3D/UnitDebugMenu/PanelContainer/MarginContainer/VBoxContainer/GridContainer/AnimationFpsSpinBox" to="Unit/CharacterBody3D/UnitAnimationManager" method="set_animation_fps"]
